# DiligentECSDemo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  init.ps1
cmake/: Diligent.cmake
src/: main.cpp
